refactoring and error handler